btn-link-condensed

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -449,7 +449,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 1 of 1" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 1 of 1" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -613,7 +613,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 1 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 1 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -721,7 +721,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 2 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 2 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -829,7 +829,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 3 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 3 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -937,7 +937,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 4 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 4 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -1045,7 +1045,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 5 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 5 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -1153,7 +1153,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 6 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 6 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -1261,7 +1261,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 7 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 7 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -1369,7 +1369,7 @@
                                           </div>
                                         </div>
                                         <div class="_1qbj27u">
-                                          <button aria-label="Add caption Photo 8 of 8" type="button" class="_15rpys7s">
+                                          <button aria-label="Add caption Photo 8 of 8" type="button" class="btn-link-condensed">
                                             <div class="_9d4he4">Add caption</div>
                                           </button>
                                         </div>
@@ -1417,7 +1417,7 @@
                                         <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                           <span class="_kedp3u">Library</span>
                                         </h2>
-                                        <button type="button" class="_15rpys7s">
+                                        <button type="button" class="btn-link-condensed">
                                           Manage
                                         </button>
                                       </div>
@@ -1672,7 +1672,7 @@
                                           </div>
                                         </div>
                                         <div class="_p52oc2" style="width: 96px">
-                                          <button type="button" class="_15rpys7s">
+                                          <button type="button" class="btn-link-condensed">
                                             9 photos
                                           </button>
                                         </div>
