--- a/edit/title.html
+++ b/edit/title.html
@@ -538,7 +538,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                               <div class="_63wpx2">
                                                 <button
                                                   type="button"
-                                                  class="_15rpys7s"
+                                                  class="btn-link-condensed"
                                                   id="open-modal-example-m" 
                                                 >
                                                   Show examples
