--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -57,7 +57,7 @@
                         <h2 class="h1kxn3z3 dir dir-ltr">Enhanced search filters</h2>
                         <p class="d1fqbgtv dir dir-ltr">We’ve simplified our accessibility filters to provide an even
                           better search experience.</p><span class="t1kfe3xp dir dir-ltr"><button type="button"
-                            class="_15rpys7s" id="open-modal-filter-list-m">Show the full list of filters</button></span>
+                            class="btn-link-condensed" id="open-modal-filter-list-m">Show the full list of filters</button></span>
                       </div>
                       <div class="if11p26 dir dir-ltr">
                         <picture class="p1lyctf4 dir dir-ltr">
@@ -488,7 +488,7 @@
                                 <h2 class="h1kxn3z3 dir dir-ltr">Enhanced search filters</h2>
                                 <p class="d1fqbgtv dir dir-ltr">We’ve simplified our accessibility filters to provide an
                                   even better search experience.</p><span class="t1kfe3xp dir dir-ltr"><button
-                                    type="button" class="_15rpys7s" id="open-modal-filter-list">Show the full list of filters</button></span>
+                                    type="button" class="btn-link-condensed" id="open-modal-filter-list">Show the full list of filters</button></span>
                               </div>
                             </div>
                           </div>
