--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1291,7 +1291,7 @@
                                                     amazing Bat City!<br> <br>Kat can even help you create a custom itinerary! Come find out why Austin has always been one of the friendliest cities
                                                     and also why people say, “I wasn’t born here, but I got here as quickly as I could!” Then get ready to do the same!</span>
                                                     </span><button type="button"
-                                                    class="_15rpys7s" role="readMore">read more</button>
+                                                    class="btn-link-condensed" role="readMore">read more</button>
                                                   </div>                                              
                                                 </span>
                                               </section>
@@ -1443,7 +1443,7 @@
                                                               public speaker and SAG actor with national principal print, film, & TV credits. She has led marketing teams for major
                                                               brands. She is excited to meet you and discuss one of her favorite things: Austin!</span>
                                                           </span>
-                                                          <button type="button" class="_15rpys7s" role="readMore">read more</button></div>
+                                                          <button type="button" class="btn-link-condensed" role="readMore">read more</button></div>
                                                       </div>
                                                     </span>
                                                     <div class="_goqtz4">Co-hosts:<ul class="_bnh3no">
@@ -6183,7 +6183,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             </span>
                                                           </span>
                                                           <button type="button"
-                                                            class="_15rpys7s" role="readMore">read more</button></div>
+                                                            class="btn-link-condensed" role="readMore">read more</button></div>
                                                       </div>
                                                     </span>
                                                   </div>
@@ -6329,7 +6329,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             Originally from SC, Kat is naturally hospitable. A former teacher with a MED & National Board certification, Kat is a
                                                             public speaker and SAG actor with national principal print, film, & TV credits. She has led marketing teams for major
                                                             brands. She is excited to meet you and discuss one of her favorite things: Austin!</span>
-                                                            <button type="button" class="_15rpys7s" role="readMore">read more</button></div>
+                                                            <button type="button" class="btn-link-condensed" role="readMore">read more</button></div>
                                                       </div>
                                                     </span>
                                                     <div class="_goqtz4">Co-hosts:<ul class="_bnh3no">
