--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -14005,7 +14005,7 @@
                                                 data-testid="epdp-review-show-more-675691390681590266"
                                                 aria-describedby="review_675691390681590266_title"
                                                 type="button"
-                                                class="_15rpys7s"
+                                                class="btn-link-condensed"
                                               >
                                                 <span
                                                   class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
