--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -6330,7 +6330,7 @@
                                                         inaccuracies, and other issues like trouble checking&nbsp;in.
                                                       </div>
                                                       <button aria-label="Learn more" type="button"
-                                                        class="_15rpys7s">Learn
+                                                        class="btn-link-condensed">Learn
                                                         more</button>
                                                     </div>
                                                   </section>
