--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11221,7 +11221,7 @@
                                                                                     class="_1wh7hnv"><button
                                                                                       data-modal="#service-animal-modal"
                                                                                       type="button"
-                                                                                      class="_15rpys7s">Bringing a
+                                                                                      class="btn-link-condensed">Bringing a
                                                                                       service animal?</button></div>
                                                                                 </div>
                                                                                 <div class="flex">
@@ -19612,7 +19612,7 @@
                                           <div class="s17jnjyz dir dir-ltr">
                                             <button data-testid="epdp-review-show-more-675691390681590266"
                                               aria-describedby="review_675691390681590266_title" type="button"
-                                              class="_15rpys7s">
+                                              class="btn-link-condensed">
                                               <span
                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                   class="dir dir-ltr">Show more</span><span
@@ -25261,7 +25261,7 @@
                               <div class="_13dglly">
                                 <div class="_ecdkyj">
                                   <div class="_120sz63">
-                                    <button type="button" class="_15rpys7s">
+                                    <button type="button" class="btn-link-condensed">
                                       View On Airbnb
                                     </button>
                                   </div>
@@ -25297,7 +25297,7 @@
                       <div class="flex">
                         <div class="_gfomxi">
                           <span id="footerlink-row-title" class="_ky6m5s"><button
-                              aria-describedby="footerlink-row-subtitle" type="button" class="_15rpys7s">
+                              aria-describedby="footerlink-row-subtitle" type="button" class="btn-link-condensed">
                               Go back
                             </button></span>
                         </div>
@@ -27613,7 +27613,7 @@
                                 ocean swim. The bars and restaurants of Diniwid Beach are
                                 close by and White Beach is a 10 minute van ride away.</span></span>
                           </div>
-                          <button type="button" class="_15rpys7s" id="where-modal-read-more">
+                          <button type="button" class="btn-link-condensed" id="where-modal-read-more">
                             <span
                               class="flex d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                 class="dir dir-ltr">read more</span><span class="atm_gz_1y44olf dir dir-ltr"><svg
