--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1879,7 +1879,7 @@
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
                   <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
-                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
+                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="btn-link-condensed"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
                 </div>
               </div>
@@ -1934,7 +1934,7 @@
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
                   <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
-                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
+                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="btn-link-condensed"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
                 </div>
               </div>
