--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -238,7 +238,7 @@
                                       <div class="_ptg6tm">
                                         https://www.airbnb.com/experiences/3745068?scheduled_id=68929594
                                       </div>
-                                      <button type="button" class="_15rpys7s">
+                                      <button type="button" class="btn-link-condensed">
                                         Copy
                                       </button>
                                     </div>
