--- a/payments/payment.html
+++ b/payments/payment.html
@@ -707,7 +707,7 @@
                                                         data-testid="checkout_platform.DATE_PICKER.edit"
                                                         aria-label="Edit dates"
                                                         type="button"
-                                                        class="_15rpys7s"
+                                                        class="btn-link-condensed"
                                                       >
                                                         Edit
                                                       </button>
@@ -761,7 +761,7 @@
                                                         data-testid="checkout_platform.GUEST_PICKER.edit"
                                                         aria-label="Edit Guests"
                                                         type="button"
-                                                        class="_15rpys7s"
+                                                        class="btn-link-condensed"
                                                       >
                                                         Edit
                                                       </button>
@@ -906,7 +906,7 @@
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="btn-link-condensed"
                                                             >
                                                               More info
                                                             </button>
@@ -1037,7 +1037,7 @@
                                                               id="MowebCurrencyPicker_trigger"
                                                               aria-label="Current currency: (PHP). Change payment currency"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="btn-link-condensed"
                                                             >
                                                               (PHP)
                                                             </button>
@@ -1053,7 +1053,7 @@
                                                     <div class="_aazv6v">
                                                       <button
                                                         type="button"
-                                                        class="_15rpys7s"
+                                                        class="btn-link-condensed"
                                                         data-modal="#price-details-modal"
                                                       >
                                                         More info
@@ -1158,7 +1158,7 @@
                                                           data-testid="quick-pay-payment-options-edit"
                                                           data-modal="#payment-modal"
                                                           type="button"
-                                                          class="_15rpys7s"
+                                                          class="btn-link-condensed"
                                                         >
                                                           Edit
                                                         </button>
@@ -1203,7 +1203,7 @@
                                                 <div class="_4gelgl">
                                                   <button
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="btn-link-condensed"
                                                     data-modal="#coupon-modal"
                                                   >
                                                     Enter a coupon
@@ -1265,7 +1265,7 @@
                                                 </span>
                                                 <button
                                                   type="button"
-                                                  class="_15rpys7s"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Learn more
                                                 </button>
