--- a/payments/resolutions_3.html
+++ b/payments/resolutions_3.html
@@ -444,7 +444,7 @@
                               <span class="_u7blqm">•••• 3765</span>
                             </div>
                             <button data-testid="quick-pay-payment-options-edit"
-                                  type="button" class="_15rpys7s">Edit</button>
+                                  type="button" class="btn-link-condensed">Edit</button>
                           </div>
                         </div>
                         <div
