--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -1139,7 +1139,7 @@
            <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
-             <button type="button" class="_15rpys7s">Exit</button>
+             <button type="button" class="btn-link-condensed">Exit</button>
              <div class="_1m110ux"><button type="button" class="btn-dark-block">Keep working</button></div>
             </div>
            </footer>
