--- a/edit/what.html
+++ b/edit/what.html
@@ -539,7 +539,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <div class="_63wpx2">
                                                 <button
                                                   type="button"
-                                                  class="_15rpys7s"
+                                                  class="btn-link-condensed"
                                                   id="open-modal-examples-m"
                                                 >
                                                   Show examples
