--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -5257,7 +5257,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="mt-4"><button data-testid="location-modal-button"
-                                                    type="button" class="_15rpys7s"><span
+                                                    type="button" class="btn-link-condensed"><span
                                                       class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                         class=" dir dir-ltr">More about the location</span><span
                                                         class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
@@ -7139,7 +7139,7 @@
                                                   cypress-lined allée leads to a distant hermitage, laying the scene for
                                                   memorable meals, while a tennis court,
                                                   pool, and lounges are nestled amid statues and lemon groves. Welcoming
-                                                  interiors honor… <button type="button" class="_15rpys7s">read
+                                                  interiors honor… <button type="button" class="btn-link-condensed">read
                                                     more</button></div>
                                               </div>
                                               <div class="mt-6">
@@ -15231,7 +15231,7 @@
                                                 </div>
                                               </div>
                                               <div class="mt-4"><button data-testid="location-modal-button"
-                                                  type="button" class="_15rpys7s"><span
+                                                  type="button" class="btn-link-condensed"><span
                                                     class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                       class=" dir dir-ltr">More about the location</span><span
                                                       class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
