--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -2005,7 +2005,7 @@
                                               </div>
                                             </a></div>
                                           <div class="_1n7czef">Kuniatsu (Host)</div>
-                                          <div class="_4gelgl"><button type="button" class="_15rpys7s">Report</button>
+                                          <div class="_4gelgl"><button type="button" class="btn-link-condensed">Report</button>
                                           </div>
                                         </div>
                                         <div class="_a4vf2m">
@@ -3813,7 +3813,7 @@
                                             </div>
                                           </a></div>
                                         <div class="_1n7czef">Kuniatsu (Host)</div>
-                                        <div class="_4gelgl"><button type="button" class="_15rpys7s">Report</button>
+                                        <div class="_4gelgl"><button type="button" class="btn-link-condensed">Report</button>
                                         </div>
                                       </div>
                                       <div class="_a4vf2m">
@@ -4127,7 +4127,7 @@
                                       <div style="margin-top: 24px; margin-bottom: 24px;">
                                         <div style="margin-top: 24px; margin-bottom: 24px;">
                                           <div class="_7qp4lh"></div>
-                                        </div><button type="button" class="_15rpys7s">Report Host</button>
+                                        </div><button type="button" class="btn-link-condensed">Report Host</button>
                                         <div></div>
                                       </div>
                                     </div>
@@ -4198,7 +4198,7 @@
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
                   <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
-                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
+                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="btn-link-condensed"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
                 </div>
               </div>
@@ -4253,7 +4253,7 @@
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
                   <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
-                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
+                  <div class="d1euq7pd dir dir-ltr"><button type="button" class="btn-link-condensed"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
                 </div>
               </div>
