revert visually-hidden-wrapper

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -346,7 +346,7 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
                                                     <div class="visually-hidden dir dir-ltr">
                                                       1 of 18 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
@@ -580,7 +580,7 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
                                                     <div class="visually-hidden dir dir-ltr">
                                                       1 of 30 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
@@ -872,7 +872,7 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
                                                     <div class="visually-hidden dir dir-ltr">
                                                       1 of 30 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
@@ -1124,7 +1124,7 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
                                                     <div class="visually-hidden dir dir-ltr">
                                                       1 of 20 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
