--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4509,7 +4509,7 @@
                                                   </div>
                                                 </div>
                                                 <div>
-                                                  <div class="mt-2 hidden">
+                                                  <div class="mt-2 hidden" id="credit-card-form">
                                                     <div class="_88xxct">
                                                       <div class="mt-4">
                                                         <div class="_clw8y6">
