fix calendar-section__day-header-btn revert removed style

--- a/online-experience/calendar_week.html
+++ b/online-experience/calendar_week.html
@@ -1612,7 +1612,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Sunday, 3 July 2022"
                                     >
@@ -1626,7 +1626,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Monday, 4 July 2022"
                                     >
@@ -1640,7 +1640,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Tuesday, 5 July 2022"
                                     >
@@ -1654,7 +1654,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Wednesday, 6 July 2022"
                                     >
@@ -1668,7 +1668,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Thursday, 7 July 2022"
                                     >
@@ -1682,7 +1682,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Friday, 8 July 2022"
                                     >
@@ -1696,7 +1696,7 @@
                                 <div class="rbc-header">
                                   <div class="h-full">
                                     <button
-                                      class="h-full-btn"
+                                      class="calendar-section__day-header-btn"
                                       type="button"
                                       aria-label="Saturday, 9 July 2022"
                                     >
