header__flexible-tab

--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -4524,7 +4524,7 @@
                                                                               hidden=""
                                                                             >
                                                                               <div
-                                                                                class="_11si3k3"
+                                                                                class="header__flexible-tab"
                                                                               >
                                                                                 <div
                                                                                   class="_1il0ryh"
@@ -14857,7 +14857,7 @@
                                                                               hidden=""
                                                                             >
                                                                               <div
-                                                                                class="_11si3k3"
+                                                                                class="header__flexible-tab"
                                                                               >
                                                                                 <div
                                                                                   class="_1il0ryh"
