--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -4444,7 +4444,7 @@
                                                                               hidden=""
                                                                             >
                                                                               <div
-                                                                                class="_11si3k3"
+                                                                                class="header__flexible-tab"
                                                                               >
                                                                                 <div
                                                                                   class="_1il0ryh"
